...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clusters">Clusters</string>
    <string name="help">Help</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="add_cluster">Add Cluster</string>
    <string name="cluster_name">Cluster Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cluster_delete_confirmation_question">Are you sure you want to delete the cluster %1$s?</string>
    <string name="cluster_deleted">Cluster was deleted</string>
    <string name="cluster_deleted_failed">Error: Cluster couldn\'t be removed</string>
    <string name="address_hint">IP/HTTP Address</string>W
    <string name="accept">Accept</string>
...
    <string name="client_key">Client Key (base64)</string>
    <string name="test_connection">Test Auth</string>
    <string name="update_cluster">Update Cluster</string>
    <string name="delete_cluster">Delete Cluster</string>
    <string name="port">Port</string>
    <string name="bearer_token">Bearer Token</string>
    <string name="validation_empty_cluster_name">Please enter a Cluster Name</string>
    <string name="validation_invalid_cluster_address">Please enter a Valid Cluster Address (IP/DNS record without https)</string>
    <string name="validation_invalid_port_address">Please enter a Valid Port (between 1 and 49151)</string>
    <string name="validation_empty_cluster_bearer_token">Please enter a Bearer Token</string>
    <string name="connection_succeeded">Connection succeeded</string>
    <string name="connection_failed">Connection failed</string>
    <string name="error_add_cluster">Error: cluster couldn\'t be added</string>
    <string name="error_update_cluster">Error: cluster couldn\'t be updated</string>
    <string name="https">https://</string>

    <string-array name="auth_methods">
        <item>Bearer Token</item>
...
